unpackaged/main/default/objects/Account/fields/BOSCH_Checkbox_Field__c.field-meta.xml
<CustomField>
    <fullName>BOSCH_Checkbox_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOSCH Checkbox Field</label>
    <type>Checkbox</type>
</CustomField>