unpackaged/main/default/objects/Account/fields/Bosch_text_field__c.field-meta.xml
<CustomField>
    <fullName>Bosch_text_field__c</fullName>
    <label>Bosch text field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>