unpackaged/main/default/objects/Account/fields/Release_Test_Checkbox_1__c.field-meta.xml
<CustomField>
    <fullName>Release_Test_Checkbox_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release Test Checkbox 1</label>
    <type>Checkbox</type>
</CustomField>