unpackaged/main/default/objects/Account/fields/Release_Test_Checkbox_2__c.field-meta.xml
<CustomField>
    <fullName>Release_Test_Checkbox_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release Test Checkbox 2</label>
    <type>Checkbox</type>
</CustomField>