unpackaged/main/default/objects/Account/fields/Simple_Date_Field_Test__c.field-meta.xml
<CustomField>
    <fullName>Simple_Date_Field_Test__c</fullName>
    <label>Simple Date Field Test</label>
    <type>Date</type>
</CustomField>